force-app/main/default/objects/JMS_Equipments__c/fields/JMS_AccountID__c.field-meta.xml
<CustomField>
    <fullName>JMS_AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipments</relationshipLabel>
    <relationshipName>Equipments</relationshipName>
    <type>Lookup</type>
</CustomField>