force-app/main/default/objects/JMS_Equipments__c/fields/JMS_Annual_Cost_US__c.field-meta.xml
<CustomField>
    <fullName>JMS_Annual_Cost_US__c</fullName>
    <description>Annual Cost US</description>
    <label>Annual Cost US</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>