force-app/main/default/objects/JMS_Equipments__c/fields/JMS_Date_First_Installed__c.field-meta.xml
<CustomField>
    <fullName>JMS_Date_First_Installed__c</fullName>
    <description>Date First Installed</description>
    <label>Date First Installed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>