force-app/main/default/objects/JMS_Equipments__c/fields/JMS_Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Equipment_ID__c</fullName>
    <description>Equipment ID</description>
    <externalId>true</externalId>
    <label>Equipment ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>