force-app/main/default/objects/JMS_Equipments__c/fields/JMS_Firefly_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Firefly_ID__c</fullName>
    <description>Firefly ID</description>
    <label>Firefly ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>