force-app/main/default/objects/JMS_Equipments__c/fields/JMS_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Location_ID__c</fullName>
    <description>Location ID</description>
    <label>Location ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>