force-app/main/default/objects/JMS_Equipments__c/fields/JMS_Model__c.field-meta.xml
<CustomField>
    <fullName>JMS_Model__c</fullName>
    <description>Model</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>