force-app/main/default/objects/JMS_Equipments__c/fields/JMS_Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>JMS_Retirement_Date__c</fullName>
    <label>Retirement Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>