force-app/main/default/objects/JMS_Equipments__c/fields/JMS_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>JMS_Serial_Number__c</fullName>
    <description>Serial Number</description>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>