force-app/main/default/objects/JMS_Equipments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_AccountID__c</columns>
    <columns>JMS_Model__c</columns>
    <columns>JMS_Serial_Number__c</columns>
    <columns>JMS_Date_First_Installed__c</columns>
    <columns>JMS_Retirement_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JMS_AccountID__c</field>
        <operation>contains</operation>
        <value>catherine</value>
    </filters>
    <label>All</label>
</ListView>